Fix cattool on mobile

--- a/public/css/sass/common.scss
+++ b/public/css/sass/common.scss
@@ -4623,6 +4623,8 @@ body.side-popup {
   body {
     min-width: unset;
     background-color: #f5f6f7;
+    height: fill-available;
+    height: -webkit-fill-available;
   }
   .unsupported-device {
     display: block;
